# suitepp

./: CMakeLists.txt  LICENSE  README.md
suitepp/: suite.hpp  suitepp.hpp
suitepp/detail/: concepts.hpp  for_each.hpp  if_constexpr.hpp  invoke.hpp  is_detected.hpp  logical.hpp
